k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: codeflix-auth
  labels:
    app: codeflix-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: codeflix-auth
  template:
    metadata:
      labels:
        app: codeflix-auth
    spec:
      containers:
        - name: codeflix-auth
          image: epscavalcante/codeflix-keycloak:v0.0.2
          args: ["start"]
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /realms/master
              port: 8080
          resources:
            requests: 
              cpu: "0.2"
              memory: 1Gi
            limits:
              cpu: "0.3"
              memory: 1Gi
