k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: codeflix-auth-service
  labels:
    app: codeflix-auth
spec:
  selector:
    app: codeflix-auth
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
