k8s/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-codeflix-auth
  labels:
    name: nginx-codeflix-auth
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-main"
    ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - auth.epscavalcante.dev
    secretName: letsencrypt-main-secret
  rules:
  - host: "auth.epscavalcante.dev"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: codeflix-auth-service
            port: 
              number: 8080
